tui/tests/snapshots/notebook_tree__dir_actions_open.snap
---
source: tui/tests/notebook_tree.rs
assertion_line: 314
expression: text
snapshot_kind: text
---
 Directory actions dialog                                                                              [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues!                                                       
   󱇗 Sample Note                            ▐ 2                                                                         
                                            ▐ 3 Press `?` to see keymaps and shortcuts.                                 
                                            ▐ 4 Press `m` in the note tree to create notes or directories.              
                                            ▐ 5 Press `Enter` on a note to open it and start writing.                   
                                            ▐ 6                                                                         
                                            ▐ 7 GitHub: https://github.com/gluesql/glues                                
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ ┌────Directory Actions─────┐                                              
                                            ▐ │                          │                                              
                                            ▐ │   Add note               │                                              
                                            ▐ │   Add directory          │                                              
                                            ▐ │   Rename directory       │                                              
                                            ▐ │   Remove directory       │                                              
                                            ▐ │   Show directory info    │                                              
                                            ▐ │   Close                  │                                              
                                            ▐ │                          │                                              
                                            ▐ └──────────────────────────┘                                              
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
