tui/tests/snapshots/notebook_tree__dir_added.snap
---
source: tui/tests/notebook_tree.rs
assertion_line: 144
expression: text
snapshot_kind: text
---
 Directory 'Tmp' selected                                                                              [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues!                                                       
   󰉋 Tmp                                    ▐ 2                                                                         
   󱇗 Sample Note                            ▐ 3 Press `?` to see keymaps and shortcuts.                                 
                                            ▐ 4 Press `m` in the note tree to create notes or directories.              
                                            ▐ 5 Press `Enter` on a note to open it and start writing.                   
                                            ▐ 6                                                                         
                                            ▐ 7 GitHub: https://github.com/gluesql/glues                                
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
